[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbicloud-sim"
version = "0.1.0"
description = "Simulation and techno-economic optimizer for a LEO data-center constellation that runs AI compute workloads in orbit instead of downlinking raw data to Earth."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Andrew Fogelis" }]
keywords = [
    "orbital-mechanics",
    "satellite-constellation",
    "edge-compute",
    "space-data-center",
    "techno-economics",
    "inter-satellite-link",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.5",
    "skyfield>=1.46",
    "networkx>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.6"]

[project.scripts]
orbicloud = "orbicloud_sim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["orbicloud_sim"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
